--- a/static/css/main.sass.css
+++ b/static/css/main.sass.css
@@ -1,8 +1,94 @@
+[data-layout-mode="dark"] {
+  --body-bg: #1c232b;
+  --heading-bg:#2C3036;
+  --heading-color:#f8f9fa;
+  --card-bg:#2C3036;
+  --body-font-family: "Poppins",sans-serif;
+  --chart-color:#2C3036; }
+  [data-layout-mode="dark"] .h1, [data-layout-mode="dark"] .h2, [data-layout-mode="dark"] .h3, [data-layout-mode="dark"] .h4, [data-layout-mode="dark"] h1, [data-layout-mode="dark"] h2, [data-layout-mode="dark"] h3, [data-layout-mode="dark"] h4 {
+    color: var(--heading-color); }
+  [data-layout-mode="dark"] .vertical-menu {
+    background-color: #373c42; }
+  [data-layout-mode="dark"] .brand-box {
+    background-color: #373c42; }
+  [data-layout-mode="dark"] #vertical-menu-btn {
+    background-color: #2C3036;
+    color: var(--heading-color); }
+  [data-layout-mode="dark"] .card {
+    background-color: var(--chart-color); }
+  [data-layout-mode="dark"] #page-header {
+    background-color: var(--heading-bg); }
+
+[data-layout-mode="dark"] {
+  --body-bg: #1c232b;
+  --heading-bg:#2C3036;
+  --heading-color:#f8f9fa;
+  --card-bg:#2C3036;
+  --body-font-family: "Poppins",sans-serif;
+  --chart-color:#2C3036; }
+  [data-layout-mode="dark"] .h1, [data-layout-mode="dark"] .h2, [data-layout-mode="dark"] .h3, [data-layout-mode="dark"] .h4, [data-layout-mode="dark"] h1, [data-layout-mode="dark"] h2, [data-layout-mode="dark"] h3, [data-layout-mode="dark"] h4 {
+    color: var(--heading-color); }
+  [data-layout-mode="dark"] .vertical-menu {
+    background-color: #373c42; }
+  [data-layout-mode="dark"] .brand-box {
+    background-color: #373c42; }
+  [data-layout-mode="dark"] #vertical-menu-btn {
+    background-color: #2C3036;
+    color: var(--heading-color); }
+  [data-layout-mode="dark"] .card {
+    background-color: var(--chart-color); }
+  [data-layout-mode="dark"] #page-header {
+    background-color: var(--heading-bg); }
+
+*, :after, :before {
+  box-sizing: border-box; }
+
 body {
-  background-color: #fafbfe; }
+  font-family: var(--body-font-family);
+  background-color: var(--body-bg); }
+  body * {
+    outline: none; }
+
+#page-header {
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 1002; }
+  #page-header .navbar {
+    align-items: center;
+    display: flex;
+    height: 70px;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 0 12px 0 0; }
+    #page-header .navbar #vertical-menu-btn {
+      height: 70px;
+      box-shadow: none;
+      border: 0;
+      font-size: 18px; }
+    #page-header .navbar .brand-box {
+      padding: 0 1.5em;
+      text-align: center;
+      width: 250px; }
+
+.vertical-menu {
+  bottom: 0;
+  box-shadow: 0 0.75rem 1.5rem #122615;
+  margin-top: 0;
+  padding-top: 70px;
+  position: fixed;
+  top: 0;
+  width: 250px;
+  z-index: 1001;
+  left: 0px; }
+
+.d-f {
+  display: flex !important; }
 
 .content-page {
   overflow: hidden;
+  margin-left: 250px;
   padding: 105px 15px 0px;
   min-height: 100vh; }
 
@@ -19,6 +105,31 @@ body {
 .chart {
   width: 100%;
   height: 300px; }
+
+.h1, .h2, .h3, .h4, h1, h2, h3, h4 {
+  font-weight: 500;
+  line-height: 1.2;
+  margin-bottom: 0.5rem;
+  margin-top: 0; }
+
+.card {
+  margin-bottom: 24px;
+  border-radius: 0.7em;
+  padding: 1em 1em; }
+  .card .card-title {
+    font-size: 15px;
+    font-weight: 600;
+    margin: 0 0 7px; }
+
+.vertical-collpsed .brand-box {
+  width: 70px !important; }
+
+.vertical-collpsed .vertical-menu {
+  width: 70px !important;
+  z-index: 5; }
+
+.vertical-collpsed .content-page {
+  margin-left: 70px; }
 
 @media (min-width: 576px) {
   .container {
