--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -1,9 +1,53 @@
 @import 'variables'
+
+*, :after, :before 
+    box-sizing: border-box;
+    
 body
-    background-color: $background-color;
+    font-family: var(--body-font-family);
+    background-color: var(--body-bg);
+    *
+        outline: none;
+
+#page-header
+ 
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 1002;
+    .navbar
+        align-items: center;
+        display: flex;
+        height: 70px;
+        justify-content: space-between;
+        margin: 0 auto;
+        padding: 0 12px 0 0;
+        #vertical-menu-btn
+             height: 70px;
+             box-shadow: none;
+             border: 0;
+             font-size: 18px;
+        .brand-box
+            padding: 0 1.5em;
+            text-align: center;
+            width: 250px;     
+
+.vertical-menu
+    bottom: 0;
+    box-shadow: 0 0.75rem 1.5rem rgb(18, 38, 63 / 3%);
+    margin-top: 0;
+    padding-top: 70px;
+    position: fixed;
+    top: 0;
+    width: 250px
+    z-index: 1001; 
+    left: 0px;  
+.d-f
+    display: flex !important;   
 .content-page
     overflow: hidden;
-    
+    margin-left: 250px;
     padding: 105px 15px 0px;
     min-height: 100vh;
 
@@ -18,6 +62,32 @@ body
 .chart 
     width: 100%;
     height: 300px;
+    
+.h1,.h2,.h3,.h4,h1,h2,h3,h4
+    
+    font-weight: 500;
+    line-height: 1.2;
+    margin-bottom: 0.5rem;
+    margin-top: 0;
+.card
+    margin-bottom: 24px;
+    border-radius: 0.7em;
+    
+    padding: 1em 1em;
+    .card-title
+        font-size: 15px;
+        font-weight: 600;
+        margin: 0 0 7px;
+
+.vertical-collpsed 
+    .brand-box 
+        width: 70px!important;
+    .vertical-menu 
+        
+        width: 70px!important;
+        z-index: 5;
+    .content-page
+        margin-left: 70px;
 
 @media (min-width: 576px)
     .container 
