--- a/templates/base.html
+++ b/templates/base.html
@@ -6,29 +6,26 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Simple crypto dashboard">
-        <meta name="author" content="">
+        <meta name="author" content="ts">
     
         <title>CryptoCurrency Dashboard</title>
         <!--  Core CSS -->
         <link href="{{ url_for('static', filename='css/main.sass.css') }}"
-        rel="stylesheet" type="text/css">
+        rel="stylesheet" type="text/css"/>
+        
        
         <!-- lightweight charts -->
         <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
-        
+        <!--Font awesome-->
+        <script src="https://kit.fontawesome.com/2c086397a3.js" crossorigin="anonymous"></script>
+        <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
     </head>
    
-    <body>
-        <div class="header">
-            <div class="navbar">
-                Navbar MENU
-            </div>
-        </div>
-        <div clas="conntent-page"> 
-        {% block content %}
-        
-        {% endblock %}
-        </div>
+    <body data-layout-mode="dark" class="vertical-collpsed">
+        {% include "header.html" %}
+        {% include "vertical_menu.html" %}
+        <div class="content-page"> {% block content %}{% endblock %}</div>
+        {% include "footer.html" %}
    
  
     </body>
