--- a/templates/home.html
+++ b/templates/home.html
@@ -4,17 +4,17 @@
 {% block content %}
 
 <div class="container">
-    HELLO{{chart_counter}}
+    <div class="row">
     {% for chart in charts %}
-    <h1>{{chart.currency}}_{{chart.interval}}</h1>
-    <div class="chart-div">
-        <div class="chart" id="{{chart.currency}}_{{chart.interval}}" name="{{chart.currency}}_{{chart.interval}}">      
-        </div>       
+    <div class="card">   
+        <h1 class="card-title">{{chart.currency}}_{{chart.interval}}</h1>
+        <div class="chart-div">
+            <div class="chart" id="{{chart.currency}}_{{chart.interval}}" name="{{chart.currency}}_{{chart.interval}}">      
+            </div>       
+        </div>
     </div>
-    {% endfor %}  
-    <div class="chart-div">
-        <div class="chart" id="chart"></div>
-        <script src="{{ url_for('static', filename='js/chart.js') }}"></script>
+    {% endfor %}
+    <script src="{{ url_for('static', filename='js/chart.js') }}"></script>  
     </div>
 </div>
 {% endblock %}
